# psilogic

./: PAPER.md  README.md  logs.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
banchmark/: banchmark_all.py  banchmark_v3.py
psilogic/: __init__.py  psilogic.py
psilogic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_psilogic.py
