[build-system]
requires =["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psilogic"
version = "0.3.1"
authors =[
  { name = "Ali (Troxter222)", email = "troxtergrif@gmail.com" },
]
description = "PsiLogic: Active Cancellation Optimizer for Deep Neural Networks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["optimizer", "deep learning", "pytorch", "machine learning", "neural networks"]
classifiers =[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies =[
    "torch>=1.9.0",
]

[project.optional-dependencies]
dev =[
    "pytest>=7.0",
    "torchvision>=0.10",
]
[project.urls]

"Homepage"    = "https://github.com/Troxter222/psilogic"
"Paper"       = "https://doi.org/10.5281/zenodo.18739857"
"Bug Tracker" = "https://github.com/Troxter222/psilogic/issues"
"Source"      = "https://github.com/Troxter222/psilogic"

[tool.setuptools]
packages =["psilogic"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-ra -q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
line-length    = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function call in default arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version        = "3.8"
warn_return_any       = true
warn_unused_configs   = true
ignore_missing_imports = true